[project]
name = "sand"
version = "0.4.0"
description = "SAND - Satellite Acquisition Normative Downloader"
authors = [{name = "HYGEOS team"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy<2", 
    "requests", 
    "eumdac", 
    "shapely", 
    "xmltodict", 
    'pillow', 
    "pandas"]

[project.optional-dependencies]
git = [
    "core @ git+https://github.com/hygeos/core.git"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }

[tool.pixi.tasks]
tests = "pytest tests"

[tool.pixi.pypi-dependencies]
sand = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.dependencies]
numpy = "<2"
eumdac = "*"
shapely = "*"
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
ipykernel = "*"
pillow = "*"
matplotlib = "*"
pyotp = "*"
ipywidgets = "*"

[tool.pixi.feature.hyp.dependencies]
[tool.pixi.feature.sys.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
