[project]
name = "sand"
version = "1.0.2"
description = "SAND - Satellite Acquisition Normative Downloader"
authors = [{name = "HYGEOS team"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy", 
    "requests", 
    "eumdac", 
    "shapely", 
    'pillow', 
    "pandas", 
    "core @ git+https://github.com/hygeos/core@v2", 
    ]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }

[tool.pixi.tasks]
tests = "pytest tests"
dl = "python3 scripts/try_dl.py"
check_product = "python3 scripts/eval_product_dl.py"

[tool.pixi.pypi-dependencies]
sand = { path = ".", editable = true }

[tool.pixi.dependencies]
numpy = "*"
eumdac = "*"
shapely = "*"
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
ipykernel = "*"
pillow = "*"
matplotlib = "*"
ipywidgets = "*"

[tool.pixi.feature.hyp.dependencies]
[tool.pixi.feature.sys.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
