[project]
name = "sand"
version = "2.1.0"
description = "SAND - Satellite Acquisition Normative Downloader"
authors = [{name = "HYGEOS team"}]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "numpy", 
    "requests", 
    "eumdac", 
    "shapely", 
    'pillow', 
    "pandas"
]

[project.optional-dependencies]
git = [
    "core @ git+https://github.com/hygeos/core.git"
]

[project.scripts]
sand = "sand.cli:entry"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = ["hyp", "sys"], solve-group = "default" }

[tool.pixi.tasks]
tests = "pytest tests"
dl = "python3 scripts/try_dl.py"
check_product = "python3 scripts/eval_product_dl.py"
build_docs = "sphinx-build -b html /home/nathan/proj/sand/docs/source /home/nathan/proj/sand/docs/build -q"

[tool.pixi.pypi-dependencies]
sand = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
pytest-xdist = "*"
ipykernel = "*"
matplotlib = "*"

[tool.pixi.feature.hyp.dependencies]
[tool.pixi.feature.sys.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
